https://tankionline.com/play/ html5 engine not working: crashes. (Metal shader not working) https://bugs.webkit.org/show_bug.cgi?id=231490

Source/ThirdParty/ANGLE:

Add argument to RemoveInactiveInterfaceVariables to keep
output fragment variables, even if they are
Add a new test to  verify that this problem is fixed.

Reviewed by Kenneth Russell.

* src/compiler/translator/TranslatorMetalDirect.cpp:
(sh::TranslatorMetalDirect::translateImpl):
* src/compiler/translator/TranslatorVulkan.cpp:
(sh::TranslatorVulkan::translateImpl):
* src/compiler/translator/tree_ops/RemoveInactiveInterfaceVariables.cpp:
(sh::RemoveInactiveInterfaceVariables):
* src/compiler/translator/tree_ops/RemoveInactiveInterfaceVariables.h:

LayoutTests:

Add argument to RemoveInactiveInterfaceVariables to keep
output fragment variables, even if they are
Add a new test to  verify that this problem is fixed.

Reviewed by Kenneth Russell.

* webgl/pending/conformance2/glsl3/empty-shader-with-output-expected.txt: Added.
* webgl/pending/conformance2/glsl3/empty-shader-with-output.html: Added.
* webgl/pending/resources/webgl_test_files/conformance2/glsl3/empty-shader-with-output.html: Added.


Canonical link: https://commits.webkit.org/243011@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284197 268f45cc-cd09-0410-ab3c-d52691b4dbfc