Source/ThirdParty/ANGLE/src/compiler/translator/tree_ops/RemoveInactiveInterfaceVariables.cpp
@@ -28,7 +28,8 @@ class RemoveInactiveInterfaceVariablesTraverser : public TIntermTraverser
         const std::vector<sh::ShaderVariable> &inputVaryings,
         const std::vector<sh::ShaderVariable> &outputVariables,
         const std::vector<sh::ShaderVariable> &uniforms,
-        const std::vector<sh::InterfaceBlock> &interfaceBlocks);
+        const std::vector<sh::InterfaceBlock> &interfaceBlocks,
+        bool removeFragmentOutputs);
 
     bool visitDeclaration(Visit visit, TIntermDeclaration *node) override;
 
@@ -38,6 +39,7 @@ class RemoveInactiveInterfaceVariablesTraverser : public TIntermTraverser
     const std::vector<sh::ShaderVariable> &mOutputVariables;
     const std::vector<sh::ShaderVariable> &mUniforms;
     const std::vector<sh::InterfaceBlock> &mInterfaceBlocks;
+    bool mRemoveFragmentOutputs;
 };
 
 RemoveInactiveInterfaceVariablesTraverser::RemoveInactiveInterfaceVariablesTraverser(
@@ -45,13 +47,15 @@ RemoveInactiveInterfaceVariablesTraverser::RemoveInactiveInterfaceVariablesTrave
     const std::vector<sh::ShaderVariable> &inputVaryings,
     const std::vector<sh::ShaderVariable> &outputVariables,
     const std::vector<sh::ShaderVariable> &uniforms,
-    const std::vector<sh::InterfaceBlock> &interfaceBlocks)
+    const std::vector<sh::InterfaceBlock> &interfaceBlocks,
+    bool removeFragmentOutputs)
     : TIntermTraverser(true, false, false),
       mAttributes(attributes),
       mInputVaryings(inputVaryings),
       mOutputVariables(outputVariables),
       mUniforms(uniforms),
-      mInterfaceBlocks(interfaceBlocks)
+      mInterfaceBlocks(interfaceBlocks),
+      mRemoveFragmentOutputs(removeFragmentOutputs)
 {}
 
 template <typename Variable>
@@ -115,7 +119,7 @@ bool RemoveInactiveInterfaceVariablesTraverser::visitDeclaration(Visit visit,
     }
     else if (qualifier == EvqFragmentOut)
     {
-        removeDeclaration = !IsVariableActive(mOutputVariables, asSymbol->getName());
+        removeDeclaration = !IsVariableActive(mOutputVariables, asSymbol->getName()) && mRemoveFragmentOutputs;
     }
 
     if (removeDeclaration)
@@ -135,10 +139,11 @@ bool RemoveInactiveInterfaceVariables(TCompiler *compiler,
                                       const std::vector<sh::ShaderVariable> &inputVaryings,
                                       const std::vector<sh::ShaderVariable> &outputVariables,
                                       const std::vector<sh::ShaderVariable> &uniforms,
-                                      const std::vector<sh::InterfaceBlock> &interfaceBlocks)
+                                      const std::vector<sh::InterfaceBlock> &interfaceBlocks,
+                                      bool removeFragmentOutputs)
 {
     RemoveInactiveInterfaceVariablesTraverser traverser(attributes, inputVaryings, outputVariables,
-                                                        uniforms, interfaceBlocks);
+                                                        uniforms, interfaceBlocks, removeFragmentOutputs);
     root->traverse(&traverser);
     return traverser.updateTree(compiler, root);
 }
